[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engutil"
version = "0.1.0"
description = "Engineering utilities for plotting and signal generation"
authors = [
    { name="Your Name" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]